--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
+gtnh.modules.gitVersion = false
+
+modVersion = 1.3.2-evernife-v1
+
 # ExampleMod tag to use as Blowdryer (Spotless, etc.) settings version, leave empty to disable.
 # LOCAL to test local config updates.
 gtnh.settings.blowdryerTag = 0.2.0
